--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <!--Row Start-->
                 <div class="row">
                     <div class="col-lg-5 col-md-5 align-self-center left-side">
-                        <p>Do Yoga, Live Young <span>call 800 1234 56789</span></p>
+                        <p>Megan Skelly - Ayurvadic Practitioner <span>call 123-456-7890 </span></p>
                     </div>
                     <div class="col-lg-2 col-md-2 col-5 align-self-center logo">
                         <a href="index.html"><img src="images/nav-logo.png" alt="logo"></a>
@@ -47,12 +47,6 @@
                             <div id="page-content-wrapper">
                                 <span class="slide-menu" onclick="openNav()"><i class="fa fa-bars" aria-hidden="true"></i></span>
                             </div>
-                        </div>
-                        <div class="social-icons another">
-                            <i class="fa fa-facebook-official" aria-hidden="true"></i>
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                            <i class="fa fa-pinterest" aria-hidden="true"></i>
-                            <i class="fa fa-youtube" aria-hidden="true"></i>
                         </div>
                     </div>
                 </div>
@@ -73,11 +67,11 @@
             <!--Row Start-->
             <div class="row">
                 <div class="col-sm-12">
-                    <h1 data-aos="fade-left">Develop Body, Mind and Sprit!</h1>
-                    <h2 data-aos="fade-left" data-aos-delay="100">With Yoga, the Ultimate Transformation....</h2>
-                    <p data-aos="fade-left" data-aos-delay="200"><i class="fa fa-clock-o" aria-hidden="true"></i><span>We Are open 24x7</span></p>
-                    <p data-aos="fade-left" data-aos-delay="300"><i class="fa fa-phone-square" aria-hidden="true"></i><span>Call for Special Discounts</span></p>
-                    <p data-aos="fade-left" data-aos-delay="400"><i class="fa fa-envelope" aria-hidden="true"></i><span>info@yogathetheme.com</span></p>
+                    <h1 data-aos="fade-left">Your Journey to Holistic Wellness Begins Here</h1>
+                    <h2 data-aos="fade-left" data-aos-delay="100">My journey began when I discovered how Ayurveda transformed my own health, inspiring me to share these profound healing practices with others.</h2>
+                    <p data-aos="fade-left" data-aos-delay="200"><i class="fa fa-clock-o" aria-hidden="true"></i><span>Testing</span></p>
+                    <p data-aos="fade-left" data-aos-delay="300"><i class="fa fa-phone-square" aria-hidden="true"></i><span>Testing</span></p>
+                    <p data-aos="fade-left" data-aos-delay="400"><i class="fa fa-envelope" aria-hidden="true"></i><span>testing@gmail.com</span></p>
                     <a data-aos="fade-left" data-aos-delay="500" class="btn btn-success" href="about.html" role="button">our story</a>
                 </div>
             </div>
