--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             <div class="row">
                 <div class="col-md-12 col-12 heading">
                     <img src="images/leaf.png" alt="">
-                    <h2>Yoga as a lifestyle, Body & Soul</h2>
-                    <h3>interesting blog posts on creativity and design</h3>
+                    <h2>Ancient Wisdom for Modern Creativity: An Ayurvedic Journey</h2>
+                    <h3>Ayurveda teaches us that each person is a unique constellation of energies. As your guide, I help creative souls discover their natural rhythms and harness their distinctive gifts through the lens of this 5,000-year-old healing system. Learn how your dosha influences not just your health, but your creative expression and design sensibilities.</h3>
                 </div>
             </div>
             <div class="row">
