--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-12 heading">
-                    <img src="images/leaf.png" alt="">
+                    <img src="images/ayurveda.png" alt="">
                     <h2>Ancient Wisdom for Modern Creativity: An Ayurvedic Journey</h2>
                     <h3>Ayurveda teaches us that each person is a unique constellation of energies. As your guide, I help creative souls discover their natural rhythms and harness their distinctive gifts through the lens of this 5,000-year-old healing system. Learn how your dosha influences not just your health, but your creative expression and design sensibilities.</h3>
                 </div>
