--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <div class="circle__inner">
                             <div class="circle__wrapper">
                                 <div class="circle__content">
-                                    <h4><a href="products.html">Yoga <span>for</span> Life</a></h4>
+                                    <h4><a href="products.html">Testing <span>for</span> Life</a></h4>
                                     <p><a href="products.html">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</a></p>
                                 </div>
                             </div>
@@ -111,7 +111,7 @@
                         <div class="circle__inner">
                             <div class="circle__wrapper">
                                 <div class="circle__content">
-                                    <h4><a href="products.html">Yoga <span>for</span> Life</a></h4>
+                                    <h4><a href="products.html">Testing <span>for</span> Life</a></h4>
                                     <p><a href="products.html">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</a></p>
                                 </div>
                             </div>
@@ -124,7 +124,7 @@
                         <div class="circle__inner">
                             <div class="circle__wrapper">
                                 <div class="circle__content">
-                                    <h4><a href="products.html">Yoga <span>for</span> Life</a></h4>
+                                    <h4><a href="products.html">Testing <span>for</span> Life</a></h4>
                                     <p><a href="products.html">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</a></p>
                                 </div>
                             </div>
